<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.currentWeather.CurrentWeatherFragment">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvCurrentTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvTemperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Heading1"/>
                <ImageView
                    android:id="@+id/ivWeatherIcon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/weatherIconDescription" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvWeatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Subtitle1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvSunRiseSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunRiseSet"
                    android:layout_marginEnd="24dp"
                    style="@style/Caption"/>
                <TextView
                    android:id="@+id/tvSunRiseSetValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Caption"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        style="@style/Heading3"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Card">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="5"
            android:columnCount="2"
            android:paddingHorizontal="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudCover"
                android:layout_marginEnd="24dp"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
            <TextView
                android:layout_row="0"
                android:layout_column="1"
                android:id="@+id/tvCloudCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/black" />
            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:layout_marginEnd="24dp"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
            <TextView
                android:layout_row="1"
                android:layout_column="1"
                android:id="@+id/tvVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/black" />
            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dewPoint"
                android:layout_marginEnd="24dp"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
            <TextView
                android:layout_row="2"
                android:layout_column="1"
                android:id="@+id/tvDewPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/black" />
            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:layout_marginEnd="24dp"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
            <TextView
                android:layout_row="3"
                android:layout_column="1"
                android:id="@+id/tvPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/black" />
            <TextView
                android:layout_row="4"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uvIndex"
                android:layout_marginEnd="24dp"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
            <TextView
                android:layout_row="4"
                android:layout_column="1"
                android:id="@+id/tvUvIndex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                style="@style/Subtitle2"/>
        </GridLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        style="@style/Heading3"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvWind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/windSpeed"
                android:layout_marginEnd="24dp"
                style="@style/Subtitle2"/>
            <TextView
                android:id="@+id/tvWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Subtitle2"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>